<resources>
  <string name="app_name">Words of Wisdom</string>
  <string name="password_error">Password must have  at least 6 characters</string>
  <string name="email_error">Invalid email</string>
  <string name="email_hint">E-mail</string>
  <string name="password_hint">Password</string>
  <string name="username_hint">Username</string>
  <string name="register_button">Sign up</string>
  <string name="repeat_password_hint">Repeat password</string>
  <string name="username_error">Username needs to be at least 6 characters</string>
  <string name="repeat_password_error">Passwords do not match</string>
  <string name="log_in_button">Log in</string>
  <string name="all_quotes_title">All quotes</string>
  <string name="favorite_quotes_title">Favorite quotes</string>
  <string name="my_profile_title">My profile</string>
  <string name="log_out_button">Log out</string>
  <string name="number_of_quotes_text">Number of favorite quotes: %d</string>
  <string name="email_text">User email: %s</string>
  <string name="username_text">Username: %s</string>
  <string name="welcome_description">with Maya Angelou</string>
  <string name="no_items_text">There seems to be no items</string>
  <string name="error_title">Oops</string>
  <string name="error_message">Something went wrong! Please try again.</string>
  <string name="general_positive_button">OK</string>
  <string name="quotes_hint">Enter your quote</string>
  <string name="add_quotes_text">Add quote</string>
  <string name="quotes_error">Each quote must have at least 10 characters</string>
</resources>
