<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#278B97"
    tools:context="com.example.android.joker.ui.welcome.WelcomeActivity">

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="#00D6CECE"
      android:scaleType="centerCrop"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/cover" />

  <TextView
      android:id="@+id/welcomeTitle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="48dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="48dp"
      android:background="#00DED4D4"
      android:fontFamily="cursive"
      android:gravity="center"
      android:text="Words of Wisdom"
      android:textColor="#FFEA00"
      android:textSize="60sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/welcomeDescription"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="48dp"
      android:layout_marginEnd="48dp"
      android:fontFamily="casual"
      android:gravity="center"
      android:text="@string/welcome_description"
      android:textColor="#F50057"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/welcomeTitle" />

  <Button
      android:id="@+id/loginButton"
      android:layout_width="0dp"
      android:layout_height="56dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="16dp"
      android:background="#263034"
      android:fontFamily="cursive"
      android:gravity="center"
      android:text="@string/log_in_button"
      android:textColor="#FFFFFF"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@id/registerButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/registerButton"
      android:layout_width="0dp"
      android:layout_height="56dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="46dp"
      android:background="#263034"
      android:fontFamily="cursive"
      android:gravity="center"
      android:text="@string/register_button"
      android:textColor="#FFFFFF"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
